# sterile-bert-effect

./: .gitignore  README.md  environment.yml  pyproject.toml  run_pipeline.py
configs/: base_config.yaml
scripts/: 00_download_cache.sh
slurm/: 01_data_prep.sh  02_pretrain.sh  02a_pretrain_control.sh  02b_pretrain_sterile.sh  03_finetune_eval.sh  03a_finetune_control.sh  03b_finetune_sterile.sh  04_analyze.sh  run_all.sh  setup_env.sh
src/analysis/: compare_results.py  structural_probing.py
src/data/: download_wiki.py  prepare_mlm_data.py  sterilize.py  train_tokenizer.py
src/models/: finetune_pos.py  pretrain_mlm.py
src/utils/: config.py  metrics.py
tests/: test_data_pipeline.py  test_sterilize.py  test_tokenizer.py
