[project]
name = "sterile-bert-effect"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "torchaudio",
    "torchvision",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "tqdm",
    "tensorboard",
    "pytest",
    "transformers>=4.40",
    "datasets>=3.0",
    "tokenizers>=0.19",
    "accelerate>=0.30",
    "evaluate",
    "seqeval",
    "pandas",
    "conllu",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
